# job-application

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/job_application/: __init__.py  __main__.py  kaggle_titanic.py
src/job_application/InVision/: data_preprocessing.py  visualization.py  weighted_moving_avg.py
tests/: __init__.py  test_invision.py  test_kaggle_titanic.py  test_main.py
