[tool.poetry]
name = "job-application"
version = "0.0.0"
description = "Job Application"
authors = ["Juan Henao <juanhenao21@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/juanhenao21/job-application"
repository = "https://github.com/juanhenao21/job-application"
documentation = "https://job-application.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/juanhenao21/job-application/releases"

[tool.poetry.dependencies]
python = "^3.9.1"
click = "^7.0"
update = "^0.0.1"
black = "^21.12b0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
safety = "^1.9.0"
mypy = "^0.780"
typeguard = "^2.9.1"
xdoctest = "^0.12.0"
sphinx = "^3.1.0"
sphinx-autobuild = "^0.7.1"
pre-commit = "^2.5.1"
pytest-cov = "^3.0.0"
black = "^21.12b0"

[tool.poetry.scripts]
job-application = "job_application.__main__:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["job_application"]

[tool.coverage.report]
show_missing = true
fail_under = 10

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
